--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,10 +11,14 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
-    # Redirecionamento HTTP para HTTPS
+    # Redirecionamento HTTP para HTTPS em todos os subdomínios
     server {
         listen 80;
-        server_name dominioteste.com;
+        server_name frontend.dominioteste.com prometheus.dominioteste.com grafana.dominioteste.com loki.dominioteste.com;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
         location / {
             return 301 https://$host$request_uri;
@@ -24,7 +28,7 @@ http {
     # Servidor HTTPS para o Frontend
     server {
         listen 443 ssl;
-        server_name dominioteste.com;
+        server_name frontend.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
@@ -34,7 +38,6 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
-        # Proxy para o Frontend
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
@@ -42,28 +45,158 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+    }
 
-        # Proxy para o Grafana
-        location /grafana/ {
-            proxy_pass http://grafana:3000/;
+    # Servidor HTTPS para Prometheus
+    server {
+        listen 443 ssl;
+        server_name prometheus.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://prometheus:9090;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+    }
 
-        # Proxy para o Prometheus
-        location /prometheus/ {
-            proxy_pass http://prometheus:9090/;
+    # Servidor HTTPS para Grafana
+    server {
+        listen 443 ssl;
+        server_name grafana.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://grafana:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+    }
 
-        # Proxy para o Loki
-        location /loki/ {
-            proxy_pass http://loki:3100/;
+    # Servidor HTTPS para Loki
+    server {
+        listen 443 ssl;
+        server_name loki.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://loki:3100;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+    }
+}
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
+
+http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    sendfile on;
+    keepalive_timeout 65;
+
+    # Redirecionamento HTTP para HTTPS em todos os subdomínios
+    server {
+        listen 80;
+        server_name frontend.dominioteste.com prometheus.dominioteste.com grafana.dominioteste.com loki.dominioteste.com;
+
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # Servidor HTTPS para o Frontend
+    server {
+        listen 443 ssl;
+        server_name frontend.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+
+        location / {
+            proxy_pass http://frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+    }
+
+    # Servidor HTTPS para Prometheus
+    server {
+        listen 443 ssl;
+        server_name prometheus.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://prometheus:9090;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+    }
+
+    # Servidor HTTPS para Grafana
+    server {
+        listen 443 ssl;
+        server_name grafana.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://grafana:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+    }
+
+    # Servidor HTTPS para Loki
+    server {
+        listen 443 ssl;
+        server_name loki.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://loki:3100;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
