--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
             proxy_set_header X-Forwarded-Proto https;
         }
 
-        location prometheus.dominioteste.com {
+        location / {
             proxy_pass http://prometheus:9090/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
