--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,10 +25,10 @@ http {
         }
     }
 
-    # Servidor HTTPS para os subdomínios
+    # Servidor HTTPS para o Frontend
     server {
         listen 443 ssl;
-        server_name frontend.dominioteste.com prometheus.dominioteste.com grafana.dominioteste.com loki.dominioteste.com;
+        server_name frontend.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
@@ -45,25 +45,55 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+    }
+
+    # Servidor HTTPS para Prometheus (somente prometheus.dominioteste.com)
+    server {
+        listen 443 ssl;
+        server_name prometheus.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
         location / {
-            proxy_pass http://prometheus:9090/;
+            proxy_pass http://prometheus:9090;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+    }
 
-        location /grafana/ {
-            proxy_pass http://grafana:3000/;
+    # Servidor HTTPS para Grafana (somente grafana.dominioteste.com)
+    server {
+        listen 443 ssl;
+        server_name grafana.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://grafana:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+    }
 
-        location /loki/ {
-            proxy_pass http://loki:3100/;
+    # Servidor HTTPS para Loki (somente loki.dominioteste.com)
+    server {
+        listen 443 ssl;
+        server_name loki.dominioteste.com;
+
+        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+
+        location / {
+            proxy_pass http://loki:3100;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
