--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-worker_processes 1;
+worker_processes auto;
 
 events {
     worker_connections 1024;
@@ -10,8 +10,15 @@ http {
 
     sendfile on;
     keepalive_timeout 65;
-
-    # Redirecionamento HTTP para HTTPS
+ 
+    # Configuração de balanceamento de carga para o backend
+    upstream backend_servers {
+        server backend:8000;
+        server backend:8001;
+        server backend:8002;
+    }   
+    
+    # Redirecionamento HTTP para HTTPS 
     server {
         listen 80;
         server_name frontend.dominioteste.com prometheus.dominioteste.com grafana.dominioteste.com loki.dominioteste.com;
@@ -25,9 +32,9 @@ http {
         }
     }
 
-    # Servidor HTTPS para o Frontend
+    # Servidor HTTPS para o Frontend (Proxy para o Backend)
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name frontend.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
@@ -38,6 +45,15 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
+        # Proxy do backend acessível apenas pelo frontend
+        location /api/ {
+            proxy_pass http://backend:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+
         location / {
             proxy_pass http://frontend:80;
             proxy_set_header Host $host;
@@ -47,9 +63,9 @@ http {
         }
     }
 
-    # Servidor HTTPS para Prometheus (somente prometheus.dominioteste.com)
+    # Servidor HTTPS para Prometheus (acessível externamente)
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name prometheus.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
@@ -65,9 +81,9 @@ http {
         }
     }
 
-    # Servidor HTTPS para Grafana (somente grafana.dominioteste.com)
+    # Servidor HTTPS para Grafana (acessível externamente)
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name grafana.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
@@ -83,9 +99,9 @@ http {
         }
     }
 
-    # Servidor HTTPS para Loki (somente loki.dominioteste.com)
+    # Servidor HTTPS para Loki (acessível externamente)
     server {
-        listen 443 ssl;
+        listen 443 ssl http2;
         server_name loki.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
