--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,17 +17,19 @@ services:
     networks:
       - app_network
 
-  frontend:
-    image: igorlsb/frontend-app:latest
-    restart: always
-    networks:
-      - app_network
+frontend:
+  build:
+    context: ./frontend
+  image: igorlsb/frontend-app:latest  
+  restart: always
+  networks:
+    - app_network
 
   backend:
     build:
       context: ./backend
     deploy:
-      replicas: 3  # 🔹 Executa 3 instâncias do backend
+      replicas: 3  # 🔹 Executa 3 instâncias do backend para escalabilidade
       restart_policy:
         condition: always
     networks:
@@ -38,7 +40,7 @@ services:
     container_name: prometheus
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus
+      - prometheus_data:/prometheus  # 🔹 Volume para persistência dos dados
     ports:
       - "9090:9090"
     networks:
@@ -50,7 +52,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - grafana_data:/var/lib/grafana
+      - grafana_data:/var/lib/grafana  # 🔹 Volume para persistência dos dashboards
     depends_on:
       - prometheus
     networks:
@@ -61,9 +63,7 @@ services:
     container_name: loki
     volumes:
       - ./monitoring/loki-config.yml:/etc/loki/loki-config.yml
-      - loki_data:/loki
-    ports:
-      - "3100:3100"
+      - loki_data:/loki  # 🔹 Volume para persistência dos logs
     networks:
       - app_network
 
