--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.3'
+version: '3.8'
 
 services:
   nginx:
@@ -17,19 +17,19 @@ services:
     networks:
       - app_network
 
-frontend:
-  build:
-    context: ./frontend
-  image: igorlsb/frontend-app:latest  
-  restart: always
-  networks:
-    - app_network
+  frontend:
+    build:
+      context: ./frontend
+    image: igorlsb/frontend-app:latest  
+    restart: always
+    networks:
+      - app_network
 
   backend:
     build:
       context: ./backend
     deploy:
-      replicas: 3  # 🔹 Executa 3 instâncias do backend para escalabilidade
+      replicas: 3  # 🔹 Escalabilidade
       restart_policy:
         condition: always
     networks:
@@ -40,7 +40,7 @@ frontend:
     container_name: prometheus
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml
-      - prometheus_data:/prometheus  # 🔹 Volume para persistência dos dados
+      - prometheus_data:/prometheus
     ports:
       - "9090:9090"
     networks:
@@ -52,7 +52,7 @@ frontend:
     ports:
       - "3000:3000"
     volumes:
-      - grafana_data:/var/lib/grafana  # 🔹 Volume para persistência dos dashboards
+      - grafana_data:/var/lib/grafana
     depends_on:
       - prometheus
     networks:
@@ -63,7 +63,7 @@ frontend:
     container_name: loki
     volumes:
       - ./monitoring/loki-config.yml:/etc/loki/loki-config.yml
-      - loki_data:/loki  # 🔹 Volume para persistência dos logs
+      - loki_data:/loki
     networks:
       - app_network
 
