--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -75,6 +75,9 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+        location /metrics {
+            return 404;
+    }
     }
 
     # 🔹 Servidor HTTPS para Grafana (acessível externamente)
