--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,8 +46,8 @@ http {
         ssl_prefer_server_ciphers on;
 
         # 🔹 Servindo os arquivos estáticos do frontend
-        root /usr/share/nginx/html;
-        index index.html;
+        #root /usr/share/nginx/html;
+        #index index.html;
 
         # 🔹 Proxy do backend acessível apenas pelo frontend
         location /api/ {
