--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,14 +11,14 @@ http {
     sendfile on;
     keepalive_timeout 65;
  
-    # 🔹 Configuração de balanceamento de carga para o backend
+    # Configuração de balanceamento de carga para o backend
     upstream backend_servers {
         server backend:8000;
         server backend:8001;
         server backend:8002;
     }   
     
-    # 🔹 Redirecionamento HTTP para HTTPS 
+    # Redirecionamento HTTP para HTTPS 
     server {
         listen 80;
         server_name frontend.dominioteste.com prometheus.dominioteste.com grafana.dominioteste.com loki.dominioteste.com;
@@ -32,7 +32,7 @@ http {
         }
     }
 
-    # 🔹 Servidor HTTPS para o Frontend (Agora serve arquivos corretamente)
+    # Servidor HTTPS para o Frontend (Proxy para o Backend)
     server {
         listen 443 ssl http2;
         server_name frontend.dominioteste.com;
@@ -45,11 +45,7 @@ http {
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
-        # 🔹 Servindo os arquivos estáticos do frontend
-        root /usr/share/nginx/html;
-        index index.html;
-
-        # 🔹 Proxy do backend acessível apenas pelo frontend
+        # Proxy do backend acessível apenas pelo frontend
         location /api/ {
             proxy_pass http://backend_servers;
             proxy_set_header Host $host;
@@ -57,9 +53,17 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
+
+        location / {
+            proxy_pass http://frontend:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
     }
 
-    # 🔹 Servidor HTTPS para Prometheus (acessível externamente)
+    # Servidor HTTPS para Prometheus (acessível externamente)
     server {
         listen 443 ssl http2;
         server_name prometheus.dominioteste.com;
@@ -75,12 +79,9 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
         }
-        location /metrics {
-            return 404;
-    }
     }
 
-    # 🔹 Servidor HTTPS para Grafana (acessível externamente)
+    # Servidor HTTPS para Grafana (acessível externamente)
     server {
         listen 443 ssl http2;
         server_name grafana.dominioteste.com;
@@ -98,7 +99,7 @@ http {
         }
     }
 
-    # 🔹 Servidor HTTPS para Loki (acessível externamente)
+    # Servidor HTTPS para Loki (acessível externamente)
     server {
         listen 443 ssl http2;
         server_name loki.dominioteste.com;
