--- a/monitoring/loki-config.yml
+++ b/monitoring/loki-config.yml
@@ -3,22 +3,30 @@ auth_enabled: false
 server:
   http_listen_port: 3100
 
-ingester:
-  lifecycler:
-    ring:
-      kvstore:
-        store: inmemory
-      replication_factor: 1
-  chunk_idle_period: 5m
-  chunk_retain_period: 30s
-  max_transfer_retries: 0
+ingestion_rate_mb: 10
+ingestion_burst_size_mb: 20
 
 schema_config:
   configs:
-    - from: 2022-10-24
+    - from: 2024-01-01
       store: boltdb-shipper
       object_store: filesystem
       schema: v11
       index:
         prefix: index_
         period: 24h
+
+storage_config:
+  boltdb_shipper:
+    active_index_directory: /loki/index
+    shared_store: filesystem
+    cache_location: /loki/cache
+
+limits_config:
+  reject_old_samples: true
+  reject_old_samples_max_age: 168h  # 7 dias de logs
+
+compactor:
+  retention_enabled: true
+  retention_delete_delay: 24h
+  retention_delete_worker_count: 2
