--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,7 +34,7 @@ http {
 
     # Servidor HTTPS para o Frontend (Proxy para o Backend)
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name frontend.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
@@ -65,7 +65,7 @@ http {
 
     # Servidor HTTPS para Prometheus (acessível externamente)
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name prometheus.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
@@ -83,7 +83,7 @@ http {
 
     # Servidor HTTPS para Grafana (acessível externamente)
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name grafana.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
@@ -101,7 +101,7 @@ http {
 
     # Servidor HTTPS para Loki (acessível externamente)
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
         server_name loki.dominioteste.com;
 
         ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
