--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -2,7 +2,7 @@ global:
   scrape_interval: 5s  # 🔹 Coleta métricas a cada 5 segundos
 
 scrape_configs:
-  - job_name: 'backend'
+  - job_name: 'labs-test-infra_backend_1'
     metrics_path: '/metrics'  
     static_configs:
       - targets: ['backend:8000']
