--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -5,7 +5,7 @@ scrape_configs:
   - job_name: 'labs-test-infra_backend_1'
     metrics_path: '/metrics'  
     static_configs:
-      - targets: ['backend:8000']
+      - targets: ['labs-test-infra_backend_1:8000']
 
   - job_name: 'docker'
     static_configs:
