--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -2,10 +2,10 @@ global:
   scrape_interval: 5s  # 🔹 Coleta métricas a cada 5 segundos
 
 scrape_configs:
-  - job_name: 'labs-test-infra_backend_1'
+  - job_name: 'backend'
     metrics_path: '/metrics'  
     static_configs:
-      - targets: ['labs-test-infra_backend_1:8000']
+      - targets: ['backend:8000']
 
   - job_name: 'docker'
     static_configs:
